name:                ImpCore
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ImpCore#readme
license:             BSD3
license-file:        LICENSE
author:              Clay Thomas
maintainer:          thoma466@purdue.edu
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CLI
                     , OpSem
                     , AST
                     , Errors
                     , Parse
  build-depends:       base >= 4.7 && < 5
                     , recursion-schemes >= 5.0
                     , containers
                     , mtl >= 2.2
                     , parsec >= 3.1
                     , text >= 1.2
  default-language:    Haskell2010

executable ImpCore-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ImpCore
  default-language:    Haskell2010

test-suite ImpCore-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ImpCore
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ImpCore
